// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the Dashboard renders the same elements before and after the widget catalogue (LM9) > fleet overview · a caller who may not see money 1`] = `
[
  "h3: Fuel bought",
  "h3: Fleet MPG",
  "h3: Needs attention",
  "dt: Fill-ups",
  "dd: 210",
  "dd: in range",
  "dt: Gallons",
  "dd: 34,100",
  "dd: total fuel",
  "dt: Miles driven",
  "dd: 251,000",
  "dd: odometer span in range",
  "dt: Telematics coverage",
  "dd: 95%",
  "dd: 23% all time",
  "h3: Where open cases concentrate",
]
`;

exports[`the Dashboard renders the same elements before and after the widget catalogue (LM9) > fleet overview · a caller who may see money 1`] = `
[
  "h3: Fuel spend",
  "h3: Fleet MPG",
  "h3: Needs attention",
  "dt: Fill-ups",
  "dd: 210",
  "dd: in range",
  "dt: Gallons",
  "dd: 34,100",
  "dd: total fuel",
  "dt: Miles driven",
  "dd: 251,000",
  "dd: odometer span in range",
  "dt: Telematics coverage",
  "dd: 95%",
  "dd: 23% all time",
  "h3: Where open cases concentrate",
  "h3: Biggest savings on the table",
]
`;
